force-app/main/default/objects/Trip__c/Trip__c.object-meta.xml
<CustomObject>
    <description>Replacement for Lotus Notes CEC Trip Planner</description>
    <label>CEC Visit Planner</label>
    <nameField>
        <displayFormat>CEC-{00000}</displayFormat>
        <label>Trip Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEC Visit Planner</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>