force-app/main/default/objects/Trip__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>