force-app/main/default/objects/Trip__c/fields/Account_GPO__c.field-meta.xml
<CustomField>
    <fullName>Account_GPO__c</fullName>
    <description>Account GPO</description>
    <formula>Account_Name__r.GPO_Capital_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account GPO</inlineHelpText>
    <label>Account GPO</label>
    <type>Text</type>
</CustomField>