force-app/main/default/objects/Trip__c/fields/Account_IDN__c.field-meta.xml
<CustomField>
    <fullName>Account_IDN__c</fullName>
    <description>Account IDN</description>
    <formula>Account_Name__r.MDM_IDN_LEVEL1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account IDN</inlineHelpText>
    <label>Account IDN</label>
    <type>Text</type>
</CustomField>