force-app/main/default/objects/Trip__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>if(Account_Name__c != &apos;&apos;,  Account_Name__r.JDE_External_ID__c,
if ( Opportunity__c != &apos;&apos;,    Opportunity__r.Account.JDE_External_ID__c, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>