force-app/main/default/objects/Trip__c/fields/Account_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Account_ZIP__c</fullName>
    <formula>Account_Name__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ZIP</label>
    <type>Text</type>
</CustomField>