force-app/main/default/objects/Trip__c/fields/ACD__c.field-meta.xml
<CustomField>
    <fullName>ACD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Therapy Account Manager</description>
    <inlineHelpText>Therapy Account Manager</inlineHelpText>
    <label>TAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner1</relationshipName>
    <type>Lookup</type>
</CustomField>