force-app/main/default/objects/Trip__c/fields/Acute_Care__c.field-meta.xml
<CustomField>
    <fullName>Acute_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acute Care</label>
    <type>Checkbox</type>
</CustomField>