force-app/main/default/objects/Trip__c/fields/Additional_Products__c.field-meta.xml
<CustomField>
    <fullName>Additional_Products__c</fullName>
    <description>List any additional products viewed during the customer visit.</description>
    <inlineHelpText>List any additional products viewed during the customer visit.</inlineHelpText>
    <label>Additional Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>