force-app/main/default/objects/Trip__c/fields/Alternate_Airport_If_applicable__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Airport_If_applicable__c</fullName>
    <label>Alternate Airport (If applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberdeen,SD-ABR</fullName>
            </value>
            <value>
                <fullName>Abilene,TX-ABI</fullName>
            </value>
            <value>
                <fullName>Adak Island,AK-ADK</fullName>
            </value>
            <value>
                <fullName>Akiachak,AK-KKI</fullName>
            </value>
            <value>
                <fullName>Akiak,AK-AKI</fullName>
            </value>
            <value>
                <fullName>Akron/Canton,OH-CAK</fullName>
            </value>
            <value>
                <fullName>Akuton,AK-KQA</fullName>
            </value>
            <value>
                <fullName>Alakanuk,AK-AUK</fullName>
            </value>
            <value>
                <fullName>Alamogordo,NM-ALM</fullName>
            </value>
            <value>
                <fullName>Alamosa,CO-ALS</fullName>
            </value>
            <value>
                <fullName>Albany,NY-ALB</fullName>
            </value>
            <value>
                <fullName>Albany,OR-CVO</fullName>
            </value>
            <value>
                <fullName>Albany,OR-QWY</fullName>
            </value>
            <value>
                <fullName>Albuquerque,NM-ABQ</fullName>
            </value>
            <value>
                <fullName>Aleknagik,AK-WKK</fullName>
            </value>
            <value>
                <fullName>Alexandria,LA-AEX</fullName>
            </value>
            <value>
                <fullName>Allakaket,AK-AET</fullName>
            </value>
            <value>
                <fullName>Allentown,PA-ABE</fullName>
            </value>
            <value>
                <fullName>Alliance,NE-AIA</fullName>
            </value>
            <value>
                <fullName>Alpena,MI-APN</fullName>
            </value>
            <value>
                <fullName>Altoona,PA-AOO</fullName>
            </value>
            <value>
                <fullName>Amarillo,TX-AMA</fullName>
            </value>
            <value>
                <fullName>Ambler,AK-ABL</fullName>
            </value>
            <value>
                <fullName>Anaktueuk,AK-AKP</fullName>
            </value>
            <value>
                <fullName>Anchorage,AK-ANC</fullName>
            </value>
            <value>
                <fullName>Angoon,AK-AGN</fullName>
            </value>
            <value>
                <fullName>Aniak,AK-ANI</fullName>
            </value>
            <value>
                <fullName>Anvik,AK-ANV</fullName>
            </value>
            <value>
                <fullName>Appleton,WI-ATW</fullName>
            </value>
            <value>
                <fullName>Arcata,CA-ACV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>