force-app/main/default/objects/Trip__c/fields/Ambassador_AVP_Has_Approved_Request__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_AVP_Has_Approved_Request__c</fullName>
    <label>Ambassador AVP Has Approved Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>