force-app/main/default/objects/Trip__c/fields/Architectural_Firm__c.field-meta.xml
<CustomField>
    <fullName>Architectural_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of Architectural Firm</description>
    <inlineHelpText>Name of Architectural Firm</inlineHelpText>
    <label>Architectural Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CEC_Visitation_Planner1</relationshipName>
    <type>Lookup</type>
</CustomField>