force-app/main/default/objects/Trip__c/fields/Arrival_time_CEC__c.field-meta.xml
<CustomField>
    <fullName>Arrival_time_CEC__c</fullName>
    <description>Estimated Arrival Time to the CEC</description>
    <inlineHelpText>Estimated Arrival Time to the CEC
Ex. 10:00 AM</inlineHelpText>
    <label>Arrival Time - CEC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>