force-app/main/default/objects/Trip__c/fields/AS__c.field-meta.xml
<CustomField>
    <fullName>AS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Architectural Specialist or Project Manager</description>
    <inlineHelpText>Architectural Specialist or Project Manager</inlineHelpText>
    <label>AS \ PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner2</relationshipName>
    <type>Lookup</type>
</CustomField>