force-app/main/default/objects/Trip__c/fields/Assembly_Plant_Tour__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Plant_Tour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assembly Plant Tour</label>
    <type>Checkbox</type>
</CustomField>