force-app/main/default/objects/Trip__c/fields/Asset_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Tracking</label>
    <type>Checkbox</type>
</CustomField>