force-app/main/default/objects/Trip__c/fields/Assigned_Ambassador__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Ambassador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Ambassador Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_PlannerMx28</relationshipName>
    <type>Lookup</type>
</CustomField>