force-app/main/default/objects/Trip__c/fields/Assigned_Ambassador_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Ambassador_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Ambassador Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visit_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>