force-app/main/default/objects/Trip__c/fields/AVP__c.field-meta.xml
<CustomField>
    <fullName>AVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture Hillrom associates coming in for CEC Visits</description>
    <inlineHelpText>To capture Hillrom associates coming in for CEC Visits</inlineHelpText>
    <label>AVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner6uhl</relationshipName>
    <type>Lookup</type>
</CustomField>