force-app/main/default/objects/Trip__c/fields/Bariatric_Products__c.field-meta.xml
<CustomField>
    <fullName>Bariatric_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bariatric Products</label>
    <type>Checkbox</type>
</CustomField>