force-app/main/default/objects/Trip__c/fields/Bed_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Bed_Connectivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bed Connectivity</label>
    <type>Checkbox</type>
</CustomField>