force-app/main/default/objects/Trip__c/fields/Beds_Frames__c.field-meta.xml
<CustomField>
    <fullName>Beds_Frames__c</fullName>
    <label>Beds/Frames</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanta™ 2 Med Surg Bed</fullName>
                <isActive>false</isActive>
                <label>Advanta™ 2 Med Surg Bed</label>
            </value>
            <value>
                <fullName>Affinity® 4 Birthing Bed</fullName>
            </value>
            <value>
                <fullName>CareAssist® ES Medical Surgical Bed</fullName>
            </value>
            <value>
                <fullName>Centrella</fullName>
            </value>
            <value>
                <fullName>Compella™ Bariatric Bed</fullName>
            </value>
            <value>
                <fullName>Envella™ Air Fluidized Therapy Bed</fullName>
            </value>
            <value>
                <fullName>Excel Care® ES Bariatric Bed</fullName>
            </value>
            <value>
                <fullName>Hill-Rom® 100 Low LTC Bed</fullName>
            </value>
            <value>
                <fullName>Hill-Rom® Resident Long Term Care Bed</fullName>
            </value>
            <value>
                <fullName>HR900 Accella</fullName>
            </value>
            <value>
                <fullName>Progressa® Bed System</fullName>
            </value>
            <value>
                <fullName>TotalCare Bariatric Plus</fullName>
            </value>
            <value>
                <fullName>VersaCare® Med Surg Bed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>