force-app/main/default/objects/Trip__c/fields/Cardiology__c.field-meta.xml
<CustomField>
    <fullName>Cardiology__c</fullName>
    <label>Cardiology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABPM 7100</fullName>
            </value>
            <value>
                <fullName>Eli 280</fullName>
            </value>
            <value>
                <fullName>Eli 380 Ergo</fullName>
            </value>
            <value>
                <fullName>Holter</fullName>
            </value>
            <value>
                <fullName>Q-Stress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>