force-app/main/default/objects/Trip__c/fields/CEC_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>CEC_Facilitator__c</fullName>
    <description>Your Regional CEC Coordinator is the main contact and will assist with trip planning and coordination.</description>
    <inlineHelpText>Your Regional CEC Coordinator is the main contact and will assist with trip planning and coordination.</inlineHelpText>
    <label>CEC Coordinator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Anna_Grote</fullName>
                <label>Anna Grote</label>
            </value>
            <value>
                <fullName>Pat Ertel</fullName>
            </value>
            <value>
                <fullName>Sandy Foster</fullName>
            </value>
            <value>
                <fullName>Emily Hood</fullName>
            </value>
            <value>
                <fullName>Michelle Murphy</fullName>
            </value>
            <value>
                <fullName>Wanda Parkin-Le Coguic</fullName>
            </value>
            <value>
                <fullName>Sam Butler</fullName>
            </value>
            <value>
                <fullName>Clementine Pirio</fullName>
            </value>
            <value>
                <fullName>Nicholas Trpezanovski</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>