force-app/main/default/objects/Trip__c/fields/Clinical_Workflow_CWS__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Workflow_CWS__c</fullName>
    <label>Care Communications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Tracking</fullName>
            </value>
            <value>
                <fullName>Bed Connectivity</fullName>
            </value>
            <value>
                <fullName>EMR Integration</fullName>
            </value>
            <value>
                <fullName>Voalte NurseCall</fullName>
            </value>
            <value>
                <fullName>Navicare Patient Safety</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Staff Locating</fullName>
            </value>
            <value>
                <fullName>Linq</fullName>
                <label>Voalte Mobile</label>
            </value>
            <value>
                <fullName>Wireless Integration</fullName>
            </value>
            <value>
                <fullName>Voalte Patient Experience</fullName>
            </value>
            <value>
                <fullName>CareSign</fullName>
                <isActive>false</isActive>
                <label>CareSign</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>