force-app/main/default/objects/Trip__c/fields/CSAM__c.field-meta.xml
<CustomField>
    <fullName>CSAM__c</fullName>
    <inlineHelpText>Clinical Sales Account Manager</inlineHelpText>
    <label>CSAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>