force-app/main/default/objects/Trip__c/fields/CWS__c.field-meta.xml
<CustomField>
    <fullName>CWS__c</fullName>
    <description>CWS Trip Number</description>
    <displayFormat>CWS-{0000}</displayFormat>
    <inlineHelpText>CWS Trip Number</inlineHelpText>
    <label>CC Trip Number</label>
    <type>AutoNumber</type>
</CustomField>