force-app/main/default/objects/Trip__c/fields/CWS_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>CWS_Coordinator__c</fullName>
    <label>CC Coordinator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anna Grote</fullName>
            </value>
            <value>
                <fullName>Michelle Murphy</fullName>
            </value>
            <value>
                <fullName>Pat Ertel</fullName>
            </value>
            <value>
                <fullName>Sandy Foster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>