force-app/main/default/objects/Trip__c/fields/CWS_Host_Site_Location__c.field-meta.xml
<CustomField>
    <fullName>CWS_Host_Site_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Host Site Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CEC_Visitation_Planner2</relationshipName>
    <type>Lookup</type>
</CustomField>