force-app/main/default/objects/Trip__c/fields/CWS_Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>CWS_Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CEC_Visitation_Planner1</relationshipName>
    <type>Lookup</type>
</CustomField>