force-app/main/default/objects/Trip__c/fields/CWS_Trip__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Trip</label>
    <type>Checkbox</type>
</CustomField>