force-app/main/default/objects/Trip__c/fields/CWS_Trip_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trip_Date__c</fullName>
    <label>CC Trip Date</label>
    <type>DateTime</type>
</CustomField>