force-app/main/default/objects/Trip__c/fields/Depart_Time_From_CEC__c.field-meta.xml
<CustomField>
    <fullName>Depart_Time_From_CEC__c</fullName>
    <description>Estimated Departure Time from the CEC</description>
    <inlineHelpText>Estimated Departure Time from the CEC
Ex. 5:00 PM</inlineHelpText>
    <label>Depart Time From CEC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>