force-app/main/default/objects/Trip__c/fields/DHE__c.field-meta.xml
<CustomField>
    <fullName>DHE__c</fullName>
    <inlineHelpText>Digital Health Executive</inlineHelpText>
    <label>DHE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>