force-app/main/default/objects/Trip__c/fields/Drive_Time_from_Hospital_to_Airport__c.field-meta.xml
<CustomField>
    <fullName>Drive_Time_from_Hospital_to_Airport__c</fullName>
    <label>Drive Time from Hospital to Airport</label>
    <length>40</length>
    <type>Text</type>
</CustomField>