force-app/main/default/objects/Trip__c/fields/Drive_Time_Hospital_to_Alternate_Airport__c.field-meta.xml
<CustomField>
    <fullName>Drive_Time_Hospital_to_Alternate_Airport__c</fullName>
    <label>Drive Time Hospital to Alternate Airport</label>
    <length>40</length>
    <type>Text</type>
</CustomField>