force-app/main/default/objects/Trip__c/fields/EA__c.field-meta.xml
<CustomField>
    <fullName>EA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enterprise Accounts</description>
    <inlineHelpText>Enterprise Accounts</inlineHelpText>
    <label>EA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner76oK</relationshipName>
    <type>Lookup</type>
</CustomField>