force-app/main/default/objects/Trip__c/fields/EarlySense__c.field-meta.xml
<CustomField>
    <fullName>EarlySense__c</fullName>
    <label>EarlySense</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EarlySense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>