force-app/main/default/objects/Trip__c/fields/Electronic_Signage__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Signage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Signage</label>
    <type>Checkbox</type>
</CustomField>