force-app/main/default/objects/Trip__c/fields/Emergency_Services__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Services</label>
    <type>Checkbox</type>
</CustomField>