force-app/main/default/objects/Trip__c/fields/EMR_Integration__c.field-meta.xml
<CustomField>
    <fullName>EMR_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EMR Integration</label>
    <type>Checkbox</type>
</CustomField>