force-app/main/default/objects/Trip__c/fields/Environmental_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Environmental Monitoring</label>
    <type>Checkbox</type>
</CustomField>