force-app/main/default/objects/Trip__c/fields/Event_created__c.field-meta.xml
<CustomField>
    <fullName>Event_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event created</label>
    <type>Checkbox</type>
</CustomField>