force-app/main/default/objects/Trip__c/fields/Expense_ID3__c.field-meta.xml
<CustomField>
    <fullName>Expense_ID3__c</fullName>
    <description>This field is a place holder for the Expense ID from the Sunshine Act cost reporting. The ID will be manually entered when all cost have been finalized.</description>
    <inlineHelpText>This field is a place holder for the Expense ID from the Sunshine Act cost reporting. The ID will be manually entered when all cost have been finalized.</inlineHelpText>
    <label>Guest Lodging ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>