force-app/main/default/objects/Trip__c/fields/Extended_Home_Care__c.field-meta.xml
<CustomField>
    <fullName>Extended_Home_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended/Home Care</label>
    <type>Checkbox</type>
</CustomField>