force-app/main/default/objects/Trip__c/fields/Farm_Reservation_Number__c.field-meta.xml
<CustomField>
    <fullName>Farm_Reservation_Number__c</fullName>
    <label>Farm Reservation Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>