force-app/main/default/objects/Trip__c/fields/Furniture2__c.field-meta.xml
<CustomField>
    <fullName>Furniture2__c</fullName>
    <label>Furniture</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bedside Cabinet</fullName>
            </value>
            <value>
                <fullName>Lobby Seating</fullName>
            </value>
            <value>
                <fullName>Overbed Table</fullName>
            </value>
            <value>
                <fullName>Patient/Visitor Seating</fullName>
            </value>
            <value>
                <fullName>Recliner</fullName>
            </value>
            <value>
                <fullName>Sleepers-Trimline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>