force-app/main/default/objects/Trip__c/fields/Furniture__c.field-meta.xml
<CustomField>
    <fullName>Furniture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furniture</label>
    <type>Checkbox</type>
</CustomField>