force-app/main/default/objects/Trip__c/fields/Group_Account__c.field-meta.xml
<CustomField>
    <fullName>Group_Account__c</fullName>
    <label>Group Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>