force-app/main/default/objects/Trip__c/fields/Group_Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Group_Account_Address__c</fullName>
    <label>Group Account Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>