force-app/main/default/objects/Trip__c/fields/Group_Account_City__c.field-meta.xml
<CustomField>
    <fullName>Group_Account_City__c</fullName>
    <label>Group Account City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>