force-app/main/default/objects/Trip__c/fields/Guest_Airfare__c.field-meta.xml
<CustomField>
    <fullName>Guest_Airfare__c</fullName>
    <description>Guest Airfare Total Cost</description>
    <inlineHelpText>Guest Airfare Total Cost</inlineHelpText>
    <label>Guest Airfare $</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>