force-app/main/default/objects/Trip__c/fields/Guest_Ground__c.field-meta.xml
<CustomField>
    <fullName>Guest_Ground__c</fullName>
    <description>Guest Ground Total Cost</description>
    <inlineHelpText>Guest Ground Total Cost</inlineHelpText>
    <label>Guest Ground $</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>