force-app/main/default/objects/Trip__c/fields/Guest_Lodging__c.field-meta.xml
<CustomField>
    <fullName>Guest_Lodging__c</fullName>
    <description>Guest Lodging Total Cost</description>
    <inlineHelpText>Guest Lodging Total Cost</inlineHelpText>
    <label>Guest Lodging $</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>