force-app/main/default/objects/Trip__c/fields/Guest_Meals__c.field-meta.xml
<CustomField>
    <fullName>Guest_Meals__c</fullName>
    <description>Guest Meals Total Cost</description>
    <inlineHelpText>Guest Meals Total Cost</inlineHelpText>
    <label>Guest Meals $</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>