force-app/main/default/objects/Trip__c/fields/Guest_Total__c.field-meta.xml
<CustomField>
    <fullName>Guest_Total__c</fullName>
    <description>Total CEC Cost for Guest</description>
    <formula>Guest_Airfare__c + Guest_Ground__c + Guest_Lodging__c + Guest_Meals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total CEC Cost for Guest</inlineHelpText>
    <label>Guest Total $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>