force-app/main/default/objects/Trip__c/fields/Help__c.field-meta.xml
<CustomField>
    <fullName>Help__c</fullName>
    <label>Notes/Special Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>