force-app/main/default/objects/Trip__c/fields/HHC_Hand_Hygiene_Compliance__c.field-meta.xml
<CustomField>
    <fullName>HHC_Hand_Hygiene_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HHC (Hand Hygiene Compliance)</label>
    <type>Checkbox</type>
</CustomField>