force-app/main/default/objects/Trip__c/fields/Hill_Rom_IT_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Hill_Rom_IT_Solutions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clinical Workflow Solutions (CWS)</description>
    <inlineHelpText>Clinical Workflow Solutions (CWS)</inlineHelpText>
    <label>Clinical Workflow Solutions</label>
    <type>Checkbox</type>
</CustomField>