force-app/main/default/objects/Trip__c/fields/Home_Care__c.field-meta.xml
<CustomField>
    <fullName>Home_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Care</label>
    <type>Checkbox</type>
</CustomField>