force-app/main/default/objects/Trip__c/fields/Homecare__c.field-meta.xml
<CustomField>
    <fullName>Homecare__c</fullName>
    <label>Homecare</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homecare DTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>