force-app/main/default/objects/Trip__c/fields/Host_BU__c.field-meta.xml
<CustomField>
    <fullName>Host_BU__c</fullName>
    <inlineHelpText>Please enter Host Budget Unit</inlineHelpText>
    <label>Host BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSS</fullName>
            </value>
            <value>
                <fullName>FLC</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>