force-app/main/default/objects/Trip__c/fields/Host_Cell_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Host_Cell_Phone_Number__c</fullName>
    <label>Host Cell Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>